[CLI] Fix deprecation warning